--- a/src/DemoApplication/Views/_ViewImports.cshtml
+++ b/src/DemoApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebApplication8
 @using Microsoft.Extensions.OptionsModel
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@addTagHelper "*, TagHelpers"
