added custom taghelper for datetime

--- a/src/DemoApplication/Views/Home/Contact.cshtml
+++ b/src/DemoApplication/Views/Home/Contact.cshtml
@@ -8,7 +8,7 @@
     <address>
         one desk next to you<br/>
     </address>
-    current date time: <datetime format="dd-MM-YYYY"> </datetime>
+    current date time: <datetime format="dd-MM-yyyy"/> 
 </environment>
 <environment names="Staging,Production">
 
